# libprecision

./: .gitignore  CMakeLists.txt  README.md
include/libprecision/: libprecision.hpp
include/libprecision/types/: UnsignedInteger.hpp  uint128_t.hpp
src/libprecision/types/: uint128_t.cpp
tests/: CMakeLists.txt
tests/src/: UnsignedInteger.hpp  tests.cpp
